* skript.latex   + Die Vorlesung und die Übung vom Dienstag 2006-07-11 eingetragen.
  + Erste Korrekturen in Kapitel 2.

  + Das Paket capt-of gegen caption getauscht. Mit dem caption-Paket kann
    man die Beschriftung von Abbildungen linksbündig setzen, was die
    untervollen Boxen in der Gleitumgebung mit den zwei Abbildungen
    verhindert.

    Zeilen mit so geringer Breiten sollten immer links- oder
    rechtsbündig gesetzt werden, da Blocksatz an diesen Stellen (fast)
    immer scheitert. (typokurz 4.1)

  + Die ganzen \centerline und \it beseitigt. (nag)

  + Das Dokument an die Vorlage 91 angepasst; onlyamsmath und fixmath
    hinzugefügt.


git-svn-id: https://svn.lug-jena.de/uni-skripte@404 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/mundhenk-logik/skript.latex
+++ b/mundhenk-logik/skript.latex
@@ -43,6 +43,10 @@
 
 \usepackage[intlimits,leqno]{amsmath}
 \usepackage{amssymb}     % wird für \R, \C,... gebraucht
+\usepackage{fixmath}     % ISO-konforme griech. Buchstaben
+\usepackage[all,warning]{onlyamsmath}  % warnt bei Verwendung von nicht
+                                       % amsmath-Umgebungen z.\,B. $$...$$
+
 \usepackage[thmmarks,hyperref]{ntheorem} % für die Theorem-Umgebungen
                                          % (satz, defini, bemerk)
 \usepackage{xspace}      % wird weiter unten gebraucht
@@ -66,7 +70,7 @@
 \usepackage[final]{microtype} % Verbesserung der Typographie
 \usepackage{ifpdf}
 \usepackage{fancyvrb}
-\usepackage{capt-of}
+\usepackage{caption}
 
 % Damit auch die Zeichen im Mathemode in Überschriften fett sind
 % <news:lzfyyvx3pt.fsf@tfkp12.physik.uni-erlangen.de>
@@ -304,7 +308,7 @@
 \clearpage
 \chapter*{Vorwort}
 
-% entspricht Vorlage: 88
+% entspricht Vorlage: 91
 \begin{itshape}
   Dieses Dokument wurde als Skript für die auf der
   Titelseite genannte Vorlesung erstellt und wird jetzt im Rahmen des
@@ -1758,6 +1762,7 @@ Verfahren für die Umformung verwenden.
 \end{satz}
 
 \begin{figure}
+  \captionsetup{justification=RaggedRight,format=hang}
   \begin{minipage}{7.2cm}
     \centering
     \input{verkn-baum-bsp.pdf_t}
@@ -1767,6 +1772,7 @@ Verfahren für die Umformung verwenden.
   \end{minipage}
   \hfill
   \begin{minipage}{6.8cm}
+    \vspace*{8.57mm}
     \centering
     \begin{tabular}{ccc|cc}
       $c_{0}$ & $c_{3}$ & $c_{4}$ & $c_{0}\rightarrow c_{3}$ &
@@ -1780,7 +1786,7 @@ Verfahren für die Umformung verwenden.
       1 & 0 & 1 & 0 & 0\\
       1 & 1 & 0 & 1 & 0\\
       1 & 1 & 1 & 1 & 1
-    \end{tabular}\\[4.15mm]
+    \end{tabular}\\ %[3.75mm]
     \captionof{table}{Wahrheitstabelle für $c_{4}\leftrightarrow
       c_{0}\rightarrow c_{3}$ um die konjunktive Normalform zu bestimmen.}
     \label{tab:wtab-erfaeq}
@@ -2435,8 +2441,8 @@ und dass jede unerfüllbare Klauselmenge einen Beweis besitzt
    \item Eigenschaft $M(x,y)$ mit der Bedeutung \glqq $x$ mag $y$\grqq
    \item Individuen $a$ bedeutet \glqq ich\grqq, $b$ bedeutet \glqq meine Frau\grqq\xspace und
     $c$ bedeutet \glqq Peter\grqq
-   \item Quantoren über Variablen: $\forall x\colon P(x)$ heißt \glqq für alle $x$
-    gilt Eigenschaft $P$\grqq\xspace (im Bsp.: $\forall x\colon M(x,a) \rightarrow M(x,b)$)
+   \item Quantoren über Variablen: "`$\forall x\colon P(x)$"' heißt \glqq für alle $x$
+    gilt Eigenschaft $P$\grqq\xspace (im Bsp.: $\forall x\colon (M(x,a) \rightarrow M(x,b))$)
   \end{itemize}
 \end{bsp}
 
@@ -2444,24 +2450,26 @@ und dass jede unerfüllbare Klauselmenge einen Beweis besitzt
   Der Nachfolger jeder geraden ganzen Zahl ist ungerade. 2 ist eine
   gerade ganze Zahl. Also ist der Nachfolger von 2 ungerade.
 
-  \begin{tabular}{r@{\ldots}l}
+  \begin{tabular}{r@{\,\ldots\,}l}
     $G(x)$ & $x$ ist eine ganze Zahl\\
     $E(x)$ & $x$ ist gerade\\
     $f(x)$ & bezeichne den Nachfolger von $x$\\
     $b$ & Symbol 2
-  \end{tabular}
+  \end{tabular}\\
   $G$ und $E$ sind Eigenschaften, $f$ ist eine Funktion
 
+  Damit können wir nun die Aussage formal ausdrücken:
   $\forall x\colon (G(x) \wedge E(x))\rightarrow \neg E(f(x))$
 
-  Also folgt aus $G(b)$ und $E(b)$, dass $\neg E(f(b))$ gilt.
+  Also folgt aus $G(b)$ und $E(b)$, dass $\neg E\big(f(b)\big)$ gilt.
 \end{bsp}
 
 \begin{defini}[Quantoren]
   \index{Quatoren}
   $\forall$ bezeichnet man als \emph{Allquantor} und $\exists$ als
-  \emph{Existenzquantor}. $\exists x\ P(x)$ bedeutet \glqq es gibt
-  (mindestens) ein $x$ für das $P(x)$ gilt.\grqq
+  \emph{Existenzquantor}. $\forall x\colon P(x)$ bedeutet "`für alle $x$
+  gilt $P(x)$"' und $\exists x\ P(x)$ bedeutet \glqq es gibt
+  (mindestens) ein $x$ für das $P(x)$ gilt\grqq{}.
 \end{defini}
 
 \begin{tabular}{l@{\qquad}l}
@@ -2470,7 +2478,7 @@ und dass jede unerfüllbare Klauselmenge einen Beweis besitzt
   Also gibt es Tiere, die laufen können & $\exists x\colon T(x) \wedge L(x)$
 \end{tabular}
 
-Die \glqq Sprache\grqq der Theorien 1.\,Ordnung:
+Die \glqq Sprache\grqq{} der Theorien 1.\,Ordnung:
 \begin{description}
  \item[Zeichen:] logische Verknüpfungszeichen wie $\neg$, $\rightarrow$,
   $\wedge$, $\vee$, $\leftrightarrow$,\\
@@ -5323,6 +5331,71 @@ repräsentiert, sparen wir uns hier.)
   Jedes primitiv rekursive Prädikat ist in $\mathrm{S}$ repräsentierbar.
 \end{korol}
 
+% 2006-07-11
+
+\subsection{Kodieren und Dekodieren von Folgen von natürlichen Zahlen}
+
+Die Folge $a_{0}, a_{1},\ldots,a_{n}$ mit $a_{n}\ne 0$ wird kodiert als
+$2^{a_{0}}\cdot 3^{a_{1}}\cdot 5^{a_{2}}\cdot p_{n}^{a_{n}}$, wobei
+$p_{i}$ die $i$-te Primzahl ist ($p_{0}=2$).
+\begin{gather*}
+  (m)_{i} = \text{~ist die Potenz von $p_{i}$ in der
+     Primfaktorenzerlegung von $m$~} = \min_{i\leq n} \neg (
+     (p_{i})^{i+1} | m)\\
+  (36)_{2} = 0\\
+  (42)_{3} = 1
+\end{gather*}
+
+\begin{gather*}
+  lh(m) = \text{~der größte Index $i$ in einer Primzahl $p_{i}$ in der
+     Primfaktorenzerlegung von $m$}\\
+  lh(2^{3}\cdot 3^{7}\cdot 11^{8}) = 4\\
+  lh(m) = \sum_{j=1}^{m} \big( \underbrace{(\exists i)_{\leq m}
+     (p_{i}| m\wedge i\geq j)}_{=1, \text{falls $m$ Primfaktor $p_{i}$
+     mit $i>j$}, =0 \text{sonst}} \big)
+\end{gather*}
+
+Die \emph{Konkatenation} von zwei Folgen $m = 2^{a_{0}}\cdot 3^{a_{1}}\cdot
+\ldots \cdot p_{k}^{a_{k}}$ und $q = 2^{b_{0}} \cdot 3^{b_{1}} \cdot
+\ldots \cdot p_{k}^{b_{k}}$ ist $m\ast q = 2^{a_{0}}\cdot 3^{a_{1}}\cdot
+\ldots \cdot p_{k}^{a_{k}}\cdot p_{k+1}^{b_{0}} \cdot p_{k+2}^{b_{1}} \cdot
+\ldots \cdot p_{k+l+1}^{b_{k}}$.
+\begin{gather*}
+  m\ast q = m\cdot \prod_{i=0}^{lh(q)} (p_{lh(m)+i+1})^{(q)_{i}}
+\end{gather*}
+Offensichtlich ist die Konkatenation assoziativ $(m\ast q)\ast r = m\ast
+(q\ast r)$.
+
+\begin{defini}
+  Um später die allgemeine Rekursion einzuführen definieren wir
+  \begin{gather*}
+    f\#(y) = 2^{f(0)} \cdot 3^{f(1)}\cdot \ldots \cdot p_{y-1}^{f(y-1)} =
+       \prod_{i=0}^{y-1} p_{i}^{f(i)}
+  \end{gather*}
+  für eine beliebige Funktion $f\colon\N\rightarrow\N$.
+\end{defini}
+
+Sei $h$ eine primitv-rekursive Funktion, so dass $f(n) = h(n, f\#(n))$,
+dann ist $f$ primitiv-rekusiv. (Intension: Man kann bei der Rekursion auf
+beliebige Vorgängerwerte zurückgreifen)
+
+\begin{lemma}
+   $f\#$ ist primitiv-rekursiv.
+
+  \begin{proof}
+    $f$ sei eine beliebige Funktion auf den natürlichen Zahlen.
+    \begin{align*}
+      f\#(0) &= 1 &\text{(leeres Produkt)}\\
+      f\#(n+1) = f\#(n) \cdot p_{n}^{f(n)} = f\#(n) \cdot p_{n}^{h(n,
+         f\#(n))}
+    \end{align*}
+    Also ist $f\#$ primitiv-rekursiv.
+  \end{proof}
+\end{lemma}
+
+Da $f(n) = h(n, f\#(n))$, ist $f$ ebenfalls primitiv-rekursiv.
+
+% 2006-07-12
 
 \section{Arithmetisierung} 
 
@@ -5387,10 +5460,10 @@ Bsp.:\ \  \ $g(\forall x_1~ A_2^1(x_1)) = 2^{13} \cdot 3^{21} \cdot 5^{138}
 \vspace{1ex}
 
 
-Das \it{Symbol} $x_1$ hat GN $g(x_1)=21$ (ist ungerade).
+Das \textit{Symbol} $x_1$ hat GN $g(x_1)=21$ (ist ungerade).
 
 
-Der \it{Ausdruck} $x_1$ hat GN $g(x_1)=2^{21}$ (ist gerade).
+Der \textit{Ausdruck} $x_1$ hat GN $g(x_1)=2^{21}$ (ist gerade).
 \vspace{2ex}
 
 Sei $e_0, e_1, \ldots, e_n$ eine endliche Folge von Ausdrücken.
@@ -5408,10 +5481,10 @@ Bsp.:\ \  \ $g(\forall x_1~ A_2^1(x_1), x_1)
 \vspace{3ex}
 
 
-Der \it{Ausdruck} $x_1$ hat GN $g(x_1)=2^{21}$ (ungerade 2er-Potenz).
+Der \textit{Ausdruck} $x_1$ hat GN $g(x_1)=2^{21}$ (ungerade 2er-Potenz).
 \vspace{0.5ex}
 
-Die \it{Folge von Ausdrücken} $x_1$ hat GN 
+Die \textit{Folge von Ausdrücken} $x_1$ hat GN 
 $g(x_1)=2^{2^{21}}$ (gerade 2er-Potenz).
 
 
@@ -5509,8 +5582,9 @@ und atomare Formeln haben Terme als Bestandteile.
 Wir wollen eine primitiv rekursive Funktion angeben,
 die entscheidet, ob ein Zahl die Gödelnummer eines Termes ist.
 Diese Funktion ist die charakteristishe Funktion der Menge
-
-\centerline{$Trm=\{ n \mid \mbox{ $n$ ist GN eines Termes}\}$.}
+\begin{gather*}
+  Trm=\{ n \mid \text{ $n$ ist GN eines Termes}\}
+\end{gather*}
 Terme sind induktiv aufgebaut.
 Die einfachsten Terme sind Konstanten- und Variablensymbole.
 Zum Erkennen dieser Terme können wir $EIC$ und $EVb$ benutzen.
@@ -5606,28 +5680,28 @@ sind primitiv rekursiv.
 \begin{itemize}
 \item $NegFml(x)=$ die GN der Formel $(\neg \alpha)$,
 falls $x$ die GN von Formel $\alpha$ ist
-\vspace{1ex}
-
-\centerline{$NegFml(x) \ = \ 2^3 * 2^9 * x * 2^5$}
+  \begin{gather*}
+    NegFml(x) \ = \ 2^3 * 2^9 * x * 2^5
+  \end{gather*}
 
 \item $CondFml(x,y)=$ die GN der Formel $(\alpha\rightarrow \beta)$,
 falls $x$ und $y$ die GNn von $\alpha$ und $\beta$ sind
-\vspace{1ex}
-
-\centerline{$CondFml(x,y) \ = \ 2^3 * x * 2^{11} * y * 2^5$}
+  \begin{gather*}
+    CondFml(x,y) \ = \ 2^3 * x * 2^{11} * y * 2^5
+  \end{gather*}
 
 \item $GenFml(u,v)=$ die GN der Formel $(\forall x ~\alpha)$,
 falls $u$ und $v$ die GNn von $\alpha$ und $x$ sind
-\vspace{1ex}
-
-\centerline{$GenFml(u,v) \ = \ 2^3 * 2^{13} * 2^{v} * u * 2^5$}
+  \begin{gather*}
+    GenFml(u,v) \ = \ 2^3 * 2^{13} * 2^{v} * u * 2^5
+  \end{gather*}
 
 \end{itemize}
 
 Daraus können wir die Repräsentation der Relation
-\vspace{1ex}
-
-\centerline{$Fml \ = \ \{ x \mid x \mbox{ ist GN einer Formel} \}$}
+\begin{gather*}
+  Fml \ = \ \{ x \mid x \mbox{ ist GN einer Formel} \}
+\end{gather*}
 zusammensetzen.
 
 $
@@ -5785,11 +5859,10 @@ $Fr\ = \ \{ (y,u)\mid$\begin{tabular}[t]{p{0.5\textwidth}l}
                        \\[-3ex] & $ \}$
                \end{tabular}
 
-\vspace{1ex}
-
-\centerline{$Fr(y,u) \ = \ 
-       Fml(y) ~\wedge~ Vb(u) ~\wedge~ \neg (y=Subst(y,u,2^{13+8\cdot y}))$ \ \ .}
-
+  \begin{gather*}
+    Fr(y,u) =
+       Fml(y) \wedge Vb(u) \wedge \neg (y=Subst(y,u,2^{13+8\cdot y}))
+  \end{gather*}
 \end{itemize}
 
 Damit kommen wir zur Diagonalfunktion.
@@ -5851,8 +5924,9 @@ $
 \end{itemize}
 
 Die Relation
-
-\centerline{$Ax \ =\ \{ x \mid \mbox{$x$ ist GN eines Axioms} \}$}
+\begin{gather*}
+  Ax = \{ x \mid \text{$x$ ist GN eines Axioms} \}
+\end{gather*}
 ist primitiv rekursiv für die Axiome von $\mathrm{S}$.
 Damit ergibt sich, dass auch Kodierungen von Beweisen primitiv rekursiv sind.
 
@@ -6670,6 +6744,14 @@ Geben Sie Formeln zur Repräsentationen der folgenden Funktionen an
 
 \subsection*{Aufgabe 1}
 Zeigen Sie, dass $x^y$ primitiv rekursiv ist.
+\begin{align*}
+  f_{pot}(a,0) &= 1 &&= N(Z^{(1)}(a))\\
+  f_{pot}(a,b+1) &= f_{pot}(a,b)\cdot a &&= h(b, f_{pot}(a,b), a)
+\end{align*}
+mit $h=(p,q,r) = f_{mul}(U_{2}^{(3)}(p,q,r), U_{1}^{(3)}(p,q,r))$. Da
+$f_{mul}$ primitiv-rekursiv ist und $h$ durch Komposition aus
+primitv-rekursiven Funktionen entsteht ist auch $f_{pot}$
+primitiv-rekursiv.
 
 \subsection*{Aufgabe 2}
 Zeigen Sie, dass die Fibonacci-Funktion primitiv rekursiv ist.
@@ -6677,6 +6759,36 @@ Zeigen Sie, dass die Fibonacci-Funktion primitiv rekursiv ist.
   fib(0) &= 0 \qquad fib(1) =1\\
   fib(n+2) &=fib(n+1)+fib(n)
 \end{align*}
+
+Zwei weiter Funktionen mit komischen Namen:
+\begin{align*}
+  (n)_{0} &= a &\text{falls~}n=2^{a}\cdot 3^{b}\\
+  (n)_{1} &= b &\text{falls~}n=2^{a}\cdot 3^{b}
+\end{align*}
+Die Werte der Funktion in den sontigen Fällen sind ohne Interesse.
+
+Beide Funktionen sind primitiv-rekursiv:
+\begin{align*}
+  (n)_{0} &= \min_{i\leq n} \neg(2^{i+1} | n)\\
+  (n)_{1} &= \min_{i\leq n} \neg(3^{i+1} | n)
+\end{align*}
+
+Dafür definieren wir eine Hilfsfunktion $f(n) = 2^{fib(n)}\cdot
+3^{fib(n+1)}$, die die beiden Fibonacci-Zahlen kodiert.
+\begin{align*}
+  f(0) &= 3  &&= N(N(N(Z^{(0)})))\\
+  f(n+1) &= 2^{fib(n+1)}\cdot 3^{fib(n+2)} = 2^{(f(n))_{1}} \cdot
+     3^{(f(n))_{0} + (f(n))_{1}} = \phi(a, f(n))\\
+  \phi(a,b) &= f_{mult}\Big(f_{pow}(N(N(Z^{(2)}(a,b))), ( U_{2}^{(2)}(a,b)
+     )_{1}), f_{pow}(N(N(N(Z^{(2)}(a,b)))),
+     f_{add} ( (U_{2}^{(2)}(a,b))_{0}, (U_{2}^{(2)}(a,b))_{1} ) ) \Big)
+\end{align*}
+
+Zum Abschluss müssen wir noch sagen, wie die Fibonacci-Funktion definiert
+ist:
+\begin{gather*}
+  fin(n) = (f(n))_{0}
+\end{gather*}
 
 \clearpage
 \pdfbookmark[0]{Index}{index}
