--- a/mundhenk-logik/skript.latex
+++ b/mundhenk-logik/skript.latex
@@ -407,7 +407,7 @@ Beispiele für Aussagen:
 \end{itemize}
 
 \textit{Vorsicht:} Umgangssprachlich versteht man unter "`oder"' oft ein
-"`entweder \ldots oder"' (genau eine der beiden Aussagen gilt), in der
+"`entweder \ldots oder"' (genau eine der beiden Aussagen ist wahr), in der
 Logik ist es aber auch möglich, dass beide Teilaussagen wahr sind.
 
 \emph{Implikation} zweier Aussagen:
@@ -419,7 +419,7 @@ Logik ist es aber auch möglich, dass beide Teilaussagen wahr sind.
 
 \emph{Äquivalenz} zweier Aussagen:
 \begin{itemize}
- \item Jena liegt an der Saale \emph{genau dann, wenn} Hambug in
+ \item Jena liegt an der Saale \emph{genau dann, wenn} Hamburg in
   Thüringen liegt.
 \end{itemize}
 
@@ -6157,24 +6157,42 @@ eine Tautologie ist.
 \end{gather*}
 
 Wenn A2 eine Tautologie ist, dann ist die Negation davon eine
-Kontradiktion (immer falsche Aussage). Die konjunktive Normalform ist
+Kontradiktion (d.\,h. eine Formel, die unter jeder Belegung falsch ist). 
+Die konjunktive Normalform ist
 also die UND"=Verknüpfung der Negation aller passenden Belegungen:
 \begin{gather*}
   (\neg A\vee \neg B\vee\neg C) \wedge (\neg A\vee \neg B\vee C) \wedge
      (\neg A\vee B\vee\neg C) \wedge \ldots \wedge (A \vee \neg B\vee C)
      \wedge (A\vee B \vee\neg C) \wedge (A\vee B\vee C)
 \end{gather*}
-\todo{hier fehlt was}
+Daraus erhalten wir folgende resolutionsherleitung der leeren Klausel.
+
+\includegraphics{resolution.9}
 
 \subsection*{Aufgabe 2}
 
-Zeigen Sie mittels Resolution von dieser Formel, dass sie eine
+Zeigen Sie mittels Resolution, dass folgende Formel $\alpha$ eine
 Tautologie ist.
 \begin{gather*}
   \big( (A\vee B\vee \neg C) \wedge (\neg A\vee B\vee D) \wedge (C\vee D)
      \wedge (\neg A \vee \neg D) \wedge (A\vee C \vee \neg D) \big)
      \rightarrow (B\vee C)
 \end{gather*}
+
+Wir zeigen, dass die Negation $\neg \alpha$ von $\alpha$ eine Kontradiktion ist.
+Da $\alpha$ die Form $\beta\rightarrow \gamma$ hat,
+hat $\neg\alpha$ die Form $\beta \wedge \neg\gamma$.
+Also ist $\neg \alpha$ folgende Formel.
+\begin{gather*}
+  (A\vee B\vee \neg C) \wedge (\neg A\vee B\vee D) \wedge (C\vee D)
+     \wedge (\neg A \vee \neg D) \wedge (A\vee C \vee \neg D) \big)
+     \wedge \neg B \wedge \neg C
+\end{gather*}
+
+Daraus erhalten wir folgende Resolutionsherleitung der leeren Klausel.
+
+\includegraphics{resolution.10}
+
 
 \subsection*{Aufgabe 3}
 Wie lang kann höchstens ein Resolutionsbeweis sein?
@@ -6627,7 +6645,7 @@ Wir zeigen $\Svdash x=0+x$ mittels Induktion über $x$
     (2)\quad& 0+0 = 0 \rightarrow 0=0+0&\text{(b)}\\
     (3)\quad& 0=0+0 &\text{MP 1,2}
   \end{align*}
-  Damit ist $\Svdash$ bewiesen.
+  Damit ist $\Svdash x=0+x$ bewiesen.
 
  \item[IS:] $x=0+x \rightarrow x'=0+x'$
   \begin{align*}
@@ -6665,10 +6683,9 @@ Rerpäsentation ist:
  \item
   Für $Z(n_{1},\ldots,n_{k})=m=0$ gilt $\Svdash \overline{n_{1}} =
   \overline{n_{2}}\wedge \overline{n_{2}}=\overline{n_{2}}\wedge \ldots
-  \wedge \overline{n_{k}}=\overline{n_{k}}\wedge 0=0$. Nach \todo{Lemma
-  $\Svdash t=t$ link finden:}
+  \wedge \overline{n_{k}}=\overline{n_{k}}\wedge 0=0$. 
   \begin{align*}
-    (1)\quad & \overline{n_{1}} = \overline{n_{1}}\\
+    (1)\quad & \overline{n_{1}} = \overline{n_{1}} & \autoref{lemma-zahlen-elem}\\
     \vdots\quad & \vdots\\
     (k)\quad & \overline{n_{k}} = \overline{n_{k}}\\
     (k+1)\quad & \overline{0} = \overline{0}\\
@@ -6722,7 +6739,7 @@ mit $C_{i}(n) =i$ (streng) repräsentierbar ist.
 \end{enumerate}
 
 \subsection*{Aufgabe 3}
-Geben Sie Formeln zur Repräsentationen der folgenden Funktionen an
+Geben Sie Formeln zur Repräsentation der folgenden Funktionen an.
 \begin{gather*}
   f(n) = \left\lfloor \frac{n}{2} \right\rfloor \\
      f(n) = \begin{cases}
@@ -6760,32 +6777,44 @@ Zeigen Sie, dass die Fibonacci-Funktion primitiv rekursiv ist.
   fib(n+2) &=fib(n+1)+fib(n)
 \end{align*}
 
-Zwei weiter Funktionen mit komischen Namen:
+Das Problem ist, dass zur Berechnung von $fib(n)$
+sowohl auf $fib(n-1)$ als auch auf $fib(n-2)$ zurückgegriffen wird.
+Das erlaubt das Schema der Rekursion nicht direkt.
+Deswegen definieren wir zuerst eine Funktion,
+die zwei Zahlen zu einer Zahl kodiert,
+und die entsprechenden Dekodierungsfunktionen.
+Die Kodierungsfunktion $k$ ist primitiv-rekursiv.
+\begin{gather*}
+k(a,b) = 2^a \cdot 3^b
+\end{gather*}
+$k$ ist injektiv, also
+gibt es die Dekodierungsfunktionen.
 \begin{align*}
-  (n)_{0} &= a &\text{falls~}n=2^{a}\cdot 3^{b}\\
-  (n)_{1} &= b &\text{falls~}n=2^{a}\cdot 3^{b}
+  d_0(n) &= a &\text{falls~}n=k(a,b)\\
+  d_1(n)&= b &\text{falls~}n=k(a,b)
 \end{align*}
-Die Werte der Funktion in den sontigen Fällen sind ohne Interesse.
-
-Beide Funktionen sind primitiv-rekursiv:
+Falls $n$ nicht im Wertebereich von $k$ liegt,
+sind uns die Werte $d_0(n)$ und $d_1(n)$ egal.
+Die beiden Dekodierungsfunktionen sind ebenfalls primitiv-rekursiv.
 \begin{align*}
-  (n)_{0} &= \min_{i\leq n} \neg(2^{i+1} | n)\\
-  (n)_{1} &= \min_{i\leq n} \neg(3^{i+1} | n)
+  d_0(n) &= \min_{i\leq n} \neg(2^{i+1} | n)\\
+  d_1(n) &= \min_{i\leq n} \neg(3^{i+1} | n)
 \end{align*}
+Der Einfachheit halber schreiben wir $(n)_0$ für $d_0(n)$,
+und $(n)_1$ für $d_1(n)$.
 
-Dafür definieren wir eine Hilfsfunktion $f(n) = 2^{fib(n)}\cdot
-3^{fib(n+1)}$, die die beiden Fibonacci-Zahlen kodiert.
+Nun definieren wir eine Hilfsfunktion $f(n) = k(fib(n),fib(n+1))$,
+die zwei aufeinanderfolgende Fibonacci-Zahlen kodiert.
 \begin{align*}
   f(0) &= 3  &&= N(N(N(Z^{(0)})))\\
-  f(n+1) &= 2^{fib(n+1)}\cdot 3^{fib(n+2)} = 2^{(f(n))_{1}} \cdot
-     3^{(f(n))_{0} + (f(n))_{1}} = \phi(a, f(n))\\
-  \phi(a,b) &= f_{mult}\Big(f_{pow}(N(N(Z^{(2)}(a,b))), ( U_{2}^{(2)}(a,b)
+  f(n+1) &= k(fib(n+1),fib(n+2)) = k((f(n))_{1},(f(n))_{0} + (f(n))_{1} = h(n, f(n))\\
+  h(a,b) &= f_{mult}\Big(f_{pow}(N(N(Z^{(2)}(a,b))), ( U_{2}^{(2)}(a,b)
      )_{1}), f_{pow}(N(N(N(Z^{(2)}(a,b)))),
      f_{add} ( (U_{2}^{(2)}(a,b))_{0}, (U_{2}^{(2)}(a,b))_{1} ) ) \Big)
 \end{align*}
-
-Zum Abschluss müssen wir noch sagen, wie die Fibonacci-Funktion definiert
-ist:
+Also ist $f$ primitiv-rekursiv.
+Zum Abschluss müssen wir noch sagen, 
+wie die Fibonacci-Funktion definiert ist:
 \begin{gather*}
   fin(n) = (f(n))_{0}
 \end{gather*}
