- m-fast ueberall geloescht - f: --> f\colon
git-svn-id: https://svn.lug-jena.de/uni-skripte@409 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/engelbert-mass-integral/skript.latex
+++ b/engelbert-mass-integral/skript.latex
@@ -128,10 +128,6 @@
 \newcommand*{\abs}[2][]{#1\lvert#2#1\rvert}
 \newcommand*{\norm}[2][]{#1\lVert#2#1\rVert}
 
-%% wird nicht gebraucht, "fast überall" ausgeschrieben :-)
-%\newcommand*{\fue}{\ifthenelse{\boolean{mmode}}%
-%                             {\text{f.\,ü.}}{f.\,ü.\xspace}}
-
 \renewcommand*{\epsilon}{\varepsilon}
 \renewcommand*{\phi}{\varphi}
 \renewcommand*{\tilde}{\widetilde}
@@ -252,12 +248,12 @@
 Seien $(\Omega, \CF), (E, \FE)$ messbare Räume.
 
 \begin{defini}
-  Eine Abbildung $f:\Omega\rightarrow E$ heißt \emph{messbare
+  Eine Abbildung $f\colon\Omega\rightarrow E$ heißt \emph{messbare
     Abbildung\index{Abbildung!messbare}} von $(\Omega, \CF)$ in $(E,
   \FE)$, falls für alle $B\in \FE$ das volle Urbild
   $f^{-1}(B)={\omega\in\Omega:f(\omega)\in B}\in \CF$
 
-  Notation: $f:(\Omega,\CF)\rightarrow(E,\FE)$ messbar
+  Notation: $f\colon(\Omega,\CF)\rightarrow(E,\FE)$ messbar
 \end{defini}
 
 \section{Eigenschaften messbarer Funktionen}
@@ -283,7 +279,7 @@ Seien $(\Omega, \CF), (E, \FE)$ messbare Räume.
 
   Beweis: $B\in e_{2}$: ($g\circ f)^{-1}$(B)=$f^{-1}$($\underbrace{g^{-1}(B)}_{\in e_{1}})\in \CF$
  \item Einschränkung messbarer Funktionen
-  $f:(Omega,\CF)\rightarrow(E,\FE)$ messbar,
+  $f\colon(Omega,\CF)\rightarrow(E,\FE)$ messbar,
   $\Omega_{0}\subseteq\Omega$, $f_{|\Omega_{0}}:= f(\omega)$,
   $\omega\in\Omega_{0}$ (Einschränkung von f auf $\Omega_{0}$
   $\longrightarrow f_{|\Omega_{0}}:(\Omega_{0},\CF\cap\Omega_{0})\rightarrow
@@ -295,8 +291,8 @@ Beweis: $B\in e: f^{-1}_{|\Omega_{0}}(B)=\underbrace{f^{-1}(B)}_{\in
   ($\Omega,\CF), (E,e), \mathfrak{S} \subseteq e,
   \sigma(\mathfrak{S})=\mathfrak{e} (\mathfrak{S}$
   erzeugt $\mathfrak{e}$ bzw. $\mathfrak{S}$ ist ein Erzeugendensystem für $\mathfrak{E}$)
-  $f:\Omega\rightarrow E$
-  $f:(\Omega,\CF)\rightarrow(E,\mathfrak{E})$ messbar
+  $f\colon\Omega\rightarrow E$
+  $f\colon(\Omega,\CF)\rightarrow(E,\mathfrak{E})$ messbar
   $\Longleftrightarrow$ $f^{-1}(B)\in \CF, \forall B\in \mathfrak{S}$
   \begin{proof}
     \begin{enumerate}[I.]
@@ -324,7 +320,7 @@ Beweis: $B\in e: f^{-1}_{|\Omega_{0}}(B)=\underbrace{f^{-1}(B)}_{\in
     \end{enumerate}
   \end{proof}
  \item Anwendung auf den Fall ($E,\mathfrak{E})=(\R, B(\R)$)
-  f:($\Omega,\CF)\rightarrow(\R,B(\R))$ messbar
+  $f\colon(\Omega,\CF)\rightarrow(\R,B(\R))$ messbar
   $\Leftrightarrow {f<r}:=f^{-1}((-\infty,r))\in \CF$
   \begin{proof}
     Folgerung zu A.16:
@@ -337,7 +333,7 @@ Beweis: $B\in e: f^{-1}_{|\Omega_{0}}(B)=\underbrace{f^{-1}(B)}_{\in
   $\Leftrightarrow$ $f^{-1}(G) \in \CF, \forall G\subseteq E$ offen
   Anwendung von 4
  \item ($E_{1},\rho_{1}$), ($E_{2}, \rho_{2})$ metrische Räume
-  f:($E_{1},B(E_{1}))\rightarrow(E_{2},B(E_{2}))$ messbar
+  $f\colon(E_{1},B(E_{1}))\rightarrow(E_{2},B(E_{2}))$ messbar
   $\Longleftarrow$ $f\colon E_{1}\rightarrow E_{2}$ stetig
   \begin{proof}
     Es gilt: $f\colon E_{1}\rightarrow E_{2}$ stetig
@@ -392,7 +388,7 @@ $\hat{\rho}(x,y)=|h(x)-h(y)|, x,y\in\hat{\R}$
 
 \begin{defini}
   \begin{enumerate}[(i)]
-   \item Eine Funktion $f:\Omega\rightarrow\hat{\R}$ heißt
+   \item Eine Funktion $f\colon\Omega\rightarrow\hat{\R}$ heißt
     messbar erweitert reell, falls $f\colon (\Omega, \CF)
     \rightarrow (\hat{\R},B(\hat{\R})$ messbar ist
    \item $f$ messbar erweitert reell,
@@ -408,7 +404,7 @@ $\hat{\rho}(x,y)=|h(x)-h(y)|, x,y\in\hat{\R}$
    \item $f\colon\Omega\rightarrow\R$
 
     $f$ ist messbar reell auf $(\Omega,\CF)\Leftrightarrow
-    f:(\Omega,\CF)\rightarrow(\R,B(\R))$ messbar
+    f\colon(\Omega,\CF)\rightarrow(\R,B(\R))$ messbar
   \end{enumerate}
   \begin{proof}
     \begin{enumerate}[(i)]
@@ -431,7 +427,7 @@ $\hat{\rho}(x,y)=|h(x)-h(y)|, x,y\in\hat{\R}$
       \begin{enumerate}[I.]
        \item $f$ sei messbar reell
 
-	z.\,z.: $f:(\Omega,\CF)\rightarrow(\R,B(\R))$ messbar Sei
+	z.\,z.: $f\colon(\Omega,\CF)\rightarrow(\R,B(\R))$ messbar Sei
 	$B\in B(\R): f^{-1}(B)$ ($B(\R)=B(\hat{\R})\cap\R\subseteq
 	B(\hat{\R})$), da $B \in B(\hat{\R})$ und wegen der Eigenschaft,
 	dass $f$ messbar reell
@@ -1921,13 +1917,13 @@ Approximation durch kompakte Mengen
   \end{proof}
 \end{satz}
 
-  \chapter{III. Das Integral}
+  \chapter{Das Integral}
 
   \section{Das Integral für nicht negative einfache Funktionen}
   $(\Omega, \CF,m)$ beliebiger Maßraum
 
   Erinnerung: f messbare (erweitert reelle) Funktion auf $(\Omega, \CF)$
-  f: $(\Omega, \CF)$ $\rightarrow$($\hat{\R}, \mathcal{B}(\hat{\R}))$ messbar
+  $f\colon(\Omega, \CF)$ $\rightarrow$($\hat{\R}, \mathcal{B}(\hat{\R}))$ messbar
 
   \begin{defini}
     Sei f eine messbare Funktion auf $(\Omega, \CF)$.
@@ -2604,7 +2600,7 @@ Approximation durch kompakte Mengen
   \end{defini}
 
   \begin{satz}
-    $f:\R\rightarrow \hat{\R}$ beschränk, $|f|\leq c$, $c>0$,
+    $f\colon\R\rightarrow \hat{\R}$ beschränk, $|f|\leq c$, $c>0$,
     $[a,b]\subseteq\R$ endliches Intervall
 
     $f$ Riemann-integrierbar auf $[a,b]$ $\Leftrightarrow$ $f$ ist
@@ -2721,7 +2717,7 @@ $X_{1}(\omega) = \omega_{1}, X_{2}(\omega)=\omega_{2}$
 \subsection{Schnittfunktion}
 
 \begin{gather}
-  f:\Omega = \Omega_{1}\times\Omega_{2} \rightarrow \hat{\R}
+  f\colon\Omega = \Omega_{1}\times\Omega_{2} \rightarrow \hat{\R}
 \end{gather}
 
 \begin{defini} % 4
@@ -4100,7 +4096,7 @@ $H\subseteq\mathbb{B}(\Omega,\mathcal{\CF})$ mit folgenden Eigenschaften:
 
 \begin{satz}[N. Lusin]
   $(\Omega,\rho), (E,d)$ metrische Räume, $E$ separabel, $\mathcal{m}$
-  endliches Maß auf $(\Omega, \mathcal{B}(\Omega))$, $f: (\Omega,
+  endliches Maß auf $(\Omega, \mathcal{B}(\Omega))$, $f\colon (\Omega,
   \mathcal{B}(\Omega)) \rightarrow (E, \mathcal{B}(E))$.
 
   Dann folgt: Für alle $\varepsilon>0$ existiert eine abgeschlossene
