Ein paar Korrekturen (aber noch nicht alle) in Kapitel 2.4.1 (Vollständigkeitssatz der PL)
git-svn-id: https://svn.lug-jena.de/uni-skripte@410 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/mundhenk-logik/skript.latex
+++ b/mundhenk-logik/skript.latex
@@ -3436,8 +3436,9 @@ um die Konsistenz der um Axiom $\alpha$ erweiterten Theorie zu beweisen.
   $\xvdash[K]{} \neg \alpha$.
 \end{proof}
 
-Die Theoreme der Theorie $K'$ enthalten hier
-alle Theoreme der Theorie $K$.
+Die Menge aller Theoreme in $K'$ ist eine
+Obermenge der Menge aller Theoreme in $K$,
+da jedes Axiom von $K$ ebenfalls ein Axiom von $K'$ ist.
 
 \begin{defini}
   Eine Theorie $K'$ ist eine \emph{Erweiterung} von $K$,
@@ -3504,7 +3505,7 @@ und jede konsistente Theorie lässt sich dazu erweitern.
 
   Jeder Beweis in $K'$ ist endlich
   und kann deshalb nur eine endliche Anzahl von Axiomen enthalten.
-  Also kann jeder Beweis auch in einer \glqq Untertheorie\grqq $J_i$
+  Also kann jeder Beweis auch in einer \glqq Untertheorie\grqq\xspace $J_i$
   geführt werden.
   Da alle $J_i$ konsistent sind, muss $K'$ ebenfalls konsistent sein.
 
@@ -3553,7 +3554,7 @@ alle beweisbaren Formeln wahr sind.)
 \end{bsp}
 
 \begin{defini}[T-produktive Theorie]
-  Eine Theorie $K$ heißt T-produktiv (\glqq scape goat\grqq, engl. Sündenbock)
+  Eine Theorie $K$ heißt \emph{T-produktiv} (\glqq scape goat\grqq, engl. Sündenbock),
   falls für jede Formel $\alpha$ mit genau einer freien Variablen $x$ ein
   variablenfreier Term $t$ existiert mit
   \begin{gather*}
@@ -3576,10 +3577,10 @@ alle beweisbaren Formeln wahr sind.)
     $b_{1},\ldots,b_{i-1}$ vorkommt.
 
     Definiere $\sigma_{k}=(\exists x_{j_{k}}\colon \neg\alpha)
-    \rightarrow\neg\alpha[x_{j_{k}}/b_{k}]$ $K'$ hat zusätzliche Axiome
+    \rightarrow\neg\alpha[x_{j_{k}}/b_{k}]$. $K'$ hat zusätzliche Axiome
     $\sigma_{1},\sigma_{2},\ldots$.
 
-    Um zu zeigen, dass $K'$ konstent ist betrachten wir die Teiltheorien
+    Um zu zeigen, dass $K'$ konsistent ist, betrachten wir die Teiltheorien
     $K_{0},K_{1},K_{2},\ldots$ mit\\
     \null\hfill
     \begin{tabular}{r@{$\,=\,$}l}
@@ -3595,10 +3596,10 @@ alle beweisbaren Formeln wahr sind.)
     konsistent.
     \begin{itemize}
      \item $K_{0}$ ist konsistent, da $K$ konsistent ist.
-     \item Sei angenommen, dass $K_{n}$ nicht konsistent is. (Dann gilt
-      $\xvdash[K_{n}]{}\beta$ und $\xvdash[K_{n}]{}\neg\beta$) Dann folgt
-      $\xvdash[K_{n}]{}\neg\sigma_{n}$. Also folgt $\sigma_{n}
-      \xvdash[K_{n-1}]{}\neg\sigma_{n}$. Mit dem Deduktionstheorem folgt
+     \item Sei angenommen, dass $K_{n}$ nicht konsistent ist.
+      Dann gilt $\xvdash[K_{n}]{}\neg\sigma_{n}$. 
+      Also folgt $\sigma_{n} \xvdash[K_{n-1}]{}\neg\sigma_{n}$. 
+      Mit dem Deduktionstheorem folgt
       $\xvdash[K_{n-1}]{}\sigma_{n}\rightarrow\neg\sigma_{n}$ und mit der
       Tautologie $(\sigma_{n}\rightarrow\neg\sigma_{n})\rightarrow
       \neg\sigma_{n}$ folgt $\xvdash[K_{n-1}]{}\neg\sigma_{n}$, d.\,h.
@@ -3611,9 +3612,9 @@ alle beweisbaren Formeln wahr sind.)
       \begin{gather*}
         \xvdash[K_{n-1}]{} (\exists x_{j_{n}}\colon
            \neg\alpha)\quad\text{und}\quad
-           \xvdash[K_{n-1}]{} \neg\neg\alpha[x_{j_{n}}/b_{n}]
+           \xvdash[K_{n-1}]{} \neg\neg\alpha[x_{j_{n}}/b_{n}] ,
       \end{gather*}
-      mit der Negationsregel $\xvdash[K_{n-1}]{} \alpha[x_{j_{n}}/b_{n}]$.
+      und mit der Negationsregel $\xvdash[K_{n-1}]{} \alpha[x_{j_{n}}/b_{n}]$.
 
       Das $b_{n}$ kommt in keinem zusätzlichen Axiom von $K_{n-1}$ vor.
       Deshalb kann es im Beweis von $\xvdash[K_{n-1}]{}
@@ -3623,9 +3624,9 @@ alle beweisbaren Formeln wahr sind.)
 
       Nach der Aufgabe 3 auf \hyperref[sec:uebung8]{Blatt~\ref{sec:uebung8}} gilt
       $\xvdash[K_{n-1}]{}(\forall x_{j_{n}}\colon\alpha) \leftrightarrow
-      (\forall x'\colon \alpha[x_{j_{n}}/x']$. Aus $\xvdash[K_{n-1}]{}
+      (\forall x'\colon \alpha[x_{j_{n}}/x']$). Aus $\xvdash[K_{n-1}]{}
       \alpha[x_{j_{n}}/x']$ folgt mit Generalisierung $\xvdash[K_{n-1}]{}
-      (\forall x'\colon \alpha[x_{j_{n}}/x']$.
+      (\forall x'\colon \alpha[x_{j_{n}}/x'])$.
 
       Mit Äquivalenzregel folgt $\xvdash[K_{n-1}]{}(\forall x_{j_{n}}\colon
       \alpha)$. Aus $\xvdash[K_{n-1}]{} (\exists x_{j_{n}}\colon
@@ -3658,15 +3659,18 @@ alle beweisbaren Formeln wahr sind.)
       \end{gather*}
     \end{itemize}
     Wir zeigen, dass $\cM$ ein Modell von $J$ ist.
-    Dazu zeigen wir, dass für jede geschlossene Formel $\alpha$ gilt:
+    Dazu zeigen wir, dass für jede \textit{geschlossene} Formel $\alpha$ gilt:
     aus $\Mmodels \alpha$ folgt $\xvdash[J]{} \alpha$.
-    (Für jede Formel $\beta$ und deren Abschluss $\beta'$ gilt
-    (1) $\Mmodels \beta$ gdw. $\Mmodels \beta'$ und
-    (2) $\xvdash[J]{} \beta$ gdw. $\xvdash[J]{} \beta'$.)
+    (Eine nicht-geschlossene Formel $\beta$ und deren Abschluss $\beta'$
+     haben die gleichen Eigenschaften in Bezug auf Gültigkeit und Beweisbarkeit.
+     Für jede Formel $\beta$ und deren Abschluss $\beta'$ gilt
+    (1) $\Mmodels \beta$ gdw. $\Mmodels \beta'$ (wg. (E6)) und
+    (2) $\xvdash[J]{} \beta$ gdw. $\xvdash[J]{} \beta'$ (wg. Gen und (RA4).)
     Der Beweis wird mittels Induktion über den Formelaufbau geführt,
     d.\,h. über die Anzahl der in der Formel vorkommenden Verknüpfungszeichen.
 
-    Im Induktionsanfang betrachten wir geschlossene atomare Formeln $\alpha$.
+    Im Induktionsanfang betrachten wir geschlossene atomare Formeln $\alpha$
+    ohne Verknüpfungszeichen -- also ohne Quantoren.
     Diese Formeln enthalten keine Variablensymbole.
     Es folgt direkt aus der Definition der Interpretation der
     Prädikatensymbole, dass $\Mmodels \alpha$ gdw. $\xvdash[J]{} \alpha$.
@@ -3778,13 +3782,13 @@ alle beweisbaren Formeln wahr sind.)
     Da $\{ s(y) \mid s\in\Sigma_{\cM} \} = D$
     und $D$ die Menge aller variablenfreien Treme ist, folgt (2).
 
-    Es bleibt noch folgende Äquivalenz (*) zu zeigen:
+    Es bleibt noch folgende Äquivalenz ($\star$) zu zeigen:
     \begin{gather*}
       \text{für jeden variablenfreien Term $t$ gilt~} \xvdash[J]{} \alpha[y/t]
          ~ ~ \Leftrightarrow ~ ~
          \xvdash[J]{} (\forall y ~ \alpha)
     \end{gather*}
-    Wir zeigen die beiden Implikationsrichtungen von (*) getrennt.
+    Wir zeigen die beiden Implikationsrichtungen von ($\star$) getrennt.
 
     Aus $\xvdash[J]{} (\forall y~ \alpha)$ folgt
     $\xvdash[J]{} \alpha[y/t]$ für jeden variablenfreien Term $t$
@@ -3813,7 +3817,7 @@ alle beweisbaren Formeln wahr sind.)
     Damit folgt (4) aus (3).
     Die Abgeschlossenheit von $J$ führt schließlich zu (5).
 
-    Damit ist (*) bewiesen und der Beweis des Lemmas abgeschlossen.
+    Damit ist ($\star$) bewiesen und der Beweis des Lemmas abgeschlossen.
   \end{proof}
 \end{lemma}
 
@@ -3840,14 +3844,15 @@ alle beweisbaren Formeln wahr sind.)
     $\neg\alpha$ ist ein Axiom von $K'$. Also gilt $\Mmodels\neg\alpha$.
     Also ist $\not\Mmodels\alpha$. Folglich gibt es eine Interpretation,
     die kein Modell von $\alpha$ ist, d.\,h. $\alpha$ ist nicht gültig,
-    also $\not\Mmodels\alpha$.
+    also $\not\models\alpha$.
 
-    Damit haben wir gezeigt: aus $\not\xvdash[K]{}\alpha$ folgt $\not\Mmodels\alpha$.
+    Damit haben wir gezeigt: aus $\not\xvdash[K]{}\alpha$ folgt $\not\models\alpha$.
   \end{proof}
 \end{satz}
 
-Zusammengefasst: Sei $K$ Prädikatenkalkül 1.\,Ordnung. Dann sind die
-gültigen Formeln genau die in $K$ beweisbaren Formeln.
+Zusammengefasst: Sei $K$ ein Prädikatenkalkül 1.\,Ordnung. 
+Dann gilt für jede Formel $\alpha$ von $K$:
+$\alpha$ ist gültig genau dann, wenn $\alpha$ in $K$ beweisbar ist.
 
 % 2006-06-21
 
