--- a/mundhenk-logik/skript.latex
+++ b/mundhenk-logik/skript.latex
@@ -2484,9 +2484,9 @@ Die \glqq Sprache\grqq{} der Theorien 1.\,Ordnung:
   $\wedge$, $\vee$, $\leftrightarrow$,\\
   \emph{Variablensymbole} wie $x_{0}$, $x_{1}$ und $x_{2}$,\\
   \emph{Konstantensymbole} wie $a_{0}$, $a_{1}$ und $a_{2}$,\\
-  \emph{Prädikatensymbole} $A_{k}^{n}$, wobei $n\in\N^+$ die Stelligkeit und $k\in\N$,
-  z.\,B. $A_{0}^{1}, A_{1}^{1}, A_{0}^{3}, A_{1}^{5}$,\\
-  \emph{Funktionensymbole} $f_{k}^{n}$, $n\in\N^+$ ist die Stelligkeit, $k\in\N$ und\\
+  \emph{Prädikatensymbole} $A_{k}^{n}$, wobei $n\in\N^+$ die Stelligkeit und $k\in\N^+$,
+  z.\,B. $A_{1}^{1}, A_{1}^{2}, A_{1}^{3}, A_{2}^{5}$,\\
+  \emph{Funktionensymbole} $f_{k}^{n}$, $n\in\N^+$ ist die Stelligkeit, $k\in\N^+$ und\\
   \emph{Quantoren} $\forall$ und $\exists$
  \item[Terme:]
   \begin{enumerate}
@@ -3241,8 +3241,8 @@ Die Verwendung der Regel C unterliegt den folgenden Einschränkungen.
 \section{Vollständigkeit des Prädikatenkalküls
 1.\texorpdfstring{\,}{~}Ordnung}
 
-Wir wollen zeigen, dass für jeden Prädikatenkaltkül 1.\,Ordnung gilt: aus
-$\models \alpha$ folgt $\vdash\alpha$.
+Wir wollen zeigen, dass für jeden Prädikatenkalkül 1.\,Ordnung gilt: 
+aus $\models \alpha$ folgt $\vdash\alpha$.
 
 Vorüberlegung: es gibt (nur) abzählbar viele Formeln.
 
@@ -3343,7 +3343,7 @@ Das gleiche gilt für
  \item die Menge aller variablenfreien Terme
  \item die Menge aller T-produktiven Formeln
 \end{itemize}
-jeder beliebige Theorie 1.\,Ordnung.
+jeder beliebigen Theorie 1.\,Ordnung.
 
 \begin{figure}
   \todo{Bild von Menge aller Formeln, die geteilt wird in \glqq die von $K$ beweisbare
@@ -3381,7 +3381,7 @@ jeder beliebige Theorie 1.\,Ordnung.
 \end{bemerk}
 
 
-Die Theoreme eines Prädikatenkalüls 1.\,Ordnung $K$
+Die Theoreme eines Prädikatenkalküls 1.\,Ordnung $K$
 sind gültige Formeln.
 Wir wollen feststellen, ob
 es eine gültige Formel gibt, die kein Theorem von $K$ ist.
@@ -3775,10 +3775,9 @@ alle beweisbaren Formeln wahr sind.)
     Äquivalenz (3) folgt aus der Induktionsvoraussetzung.
     Äquivalenz (1) folgt aus der semantischen Definition des Allquantors.
     Äquivalenz (2) folgt aus der Definition von $\cM$.
-    Für Variablenbelegung $s$ gilt $(s(y))^{\cM} = s(y)$
-    (Terme werden durch sich selbst interpretiert).
-    Daraus folgt:
-    $s$ erfüllt $\alpha$ genau dann, wenn $\Mmodels \alpha[y/s(y)]$.
+    Für Variablenbelegung $s$ ist $s(y)\in D$.
+    Da variablenfreie Terme durch sich selbst interpretiert werden,
+    gilt: $s$ erfüllt $\alpha$ genau dann, wenn $\Mmodels \alpha[y/s(y)]$.
     Da $\{ s(y) \mid s\in\Sigma_{\cM} \} = D$
     und $D$ die Menge aller variablenfreien Treme ist, folgt (2).
 
